Added functionality to get the number of lodges.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
          verbose="true">
 
   <testsuites>
-    <testsuite name="Digipolis\Toerismevlaanderen\Lodging">
+    <testsuite name="DigipolisGent\Toerismevlaanderen\Lodging">
       <directory>tests</directory>
     </testsuite>
   </testsuites>
