--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     ],
     "require": {
         "php": ">=7.2",
-        "digipolisgent/api-client": "^1.1"
+        "digipolisgent/api-client": "^1.1",
+        "digipolisgent/value": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6",
