--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,13 @@
         "digipolisgent/value": "^1.1"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^2.3"
         "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "^2.3",
+        "phpro/grumphp": "^0.15.2",
+        "sebastian/phpcpd": "^4.1",
+        "phpmd/phpmd": "^2.7",
+        "phpstan/phpstan": "^0.11.15",
+        "sensiolabs/security-checker": "^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -39,6 +44,7 @@
         }
     },
     "scripts": {
+        "grumphp": "vendor/bin/grumphp run --ansi",
         "phpcs": "vendor/bin/phpcs",
         "test": "vendor/bin/phpunit",
         "coverage": "vendor/bin/phpunit --coverage-html ./build/coverage"
