--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Build directory is created during PhpUnit test runs.
 /build
+.phpunit.result.cache
 
 # Composer lock shoud not be included in a package.
 /composer.lock
