--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - composer install -n --dev
 
 script:
+  - vendor/bin/grumphp run
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
