--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -22,3 +22,8 @@ parameters:
         securitychecker: ~
         xmllint: ~
         yamllint: ~
+        git_commit_message:
+            allow_empty_message: false
+        git_branch_name:
+            whitelist:
+                Git-flow: /(master|develop|feature\/\d+|(release|hotfix)\/\d+\.\d+\.?\d*)/
