VG-1660: Added support for JIRA ticket numbers as branch name
It supports:

* master
* develop
* release/X.X.X
* hotfix/X.X.X
* feature/X : GitHub issue number.
* feature/ABC-X : Jira ticket number.

--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -24,6 +24,7 @@ parameters:
         yamllint: ~
         git_commit_message:
             allow_empty_message: false
+            max_subject_width: 72
         git_branch_name:
             whitelist:
-                Git-flow: /(master|develop|feature\/\d+|(release|hotfix)\/\d+\.\d+\.?\d*)/
+                Git-flow: /(master|develop|feature\/(\w+-)?\d+|(release|hotfix)\/(\d+\.\d+\.\d+))/
