VG-1660 Added extra collections
The data returned by the ToerismeVlaanderen LOD service can contain:

* 0 or more PhoneNumbers
* 0 or more EmailAddresses
* 0 or more WebsiteAddresses

This required a change in the Lodging model and normalisers to support
the correct data structure.

--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -9,7 +9,8 @@ parameters:
                 - "die("
                 - "var_dump("
                 - "exit;"
-        phpcpd: ~
+        phpcpd:
+            exclude: ['tests' ,'vendor']
         phpcs: ~
         phpmd:
             whitelist_patterns:
