--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,34 @@
 {
     "name": "digipolisgent/toerismevlaanderen-lodging",
     "description": "PHP package to access the Toerismevlaanderen Lodging linked open data.",
-    "homepage": "https://github.com/digipolisgent/php_package_dg-toerismevlaanderen-lodging",
+    "license": "MIT",
+    "type": "library",
     "keywords": [
         "digipolis",
+        "District09",
         "services",
         "toerismevlaanderen",
         "lodging",
         "linked open data"
     ],
-    "type": "library",
-    "license": "MIT",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "authors": [
         {
             "name": "Peter Decuyper",
-            "email": "peter.decuyper@digipolis.gent"
+            "email": "peter.decuyper@district09.gent"
         }
     ],
+    "homepage": "https://github.com/district09/php_package_dg-toerismevlaanderen-lodging",
     "require": {
-        "php": ">=7.2",
+        "php": "^7.4",
+        "ext-json": "*",
         "digipolisgent/api-client": "^1.1",
         "digipolisgent/value": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8",
-        "squizlabs/php_codesniffer": "^2.3",
-        "phpro/grumphp": "^0.15.2",
-        "sebastian/phpcpd": "^4.1",
-        "phpmd/phpmd": "^2.7",
-        "phpstan/phpstan": "^0.11.15",
-        "sensiolabs/security-checker": "^6.0"
+        "district09/qa-php": "^1.0.1"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "DigipolisGent\\Toerismevlaanderen\\Lodging\\": "src/"
@@ -43,17 +39,25 @@
             "DigipolisGent\\Tests\\Toerismevlaanderen\\Lodging\\": "tests/"
         }
     },
-    "scripts": {
-        "grumphp": "vendor/bin/grumphp run --ansi",
-        "phpcs": "vendor/bin/phpcs",
-        "test": "vendor/bin/phpunit",
-        "coverage": "vendor/bin/phpunit --coverage-html ./build/coverage",
-        "phpstan": "vendor/bin/phpstan analyse --level=7 ./src",
-        "post-install-cmd": "vendor/bin/grumphp git:init"
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "phpro/grumphp-shim": true
+        }
     },
     "extra": {
-        "branch-alias": {
-            "dev-develop": "0.1-dev"
+        "grumphp": {
+            "config-default-path": "vendor/district09/qa-php/configs/grumphp.yml"
         }
+    },
+    "scripts": {
+        "post-install-cmd": "vendor/bin/grumphp git:init",
+        "coverage": "vendor/bin/phpunit --configuration=phpunit.qa-php.xml --coverage-html build/coverage",
+        "grumphp": "vendor/bin/grumphp run",
+        "phpcpd": "vendor/bin/grumphp run --tasks=phpcpd",
+        "phpcs": "vendor/bin/grumphp run --tasks=phpcs",
+        "phpmd": "vendor/bin/grumphp run --tasks=phpmd",
+        "phpstan": "vendor/bin/grumphp run --tasks=phpstan",
+        "phpunit": "vendor/bin/phpunit --configuration=phpunit.qa-php.xml"
     }
 }
